# PlaceBot

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_STATUS.md  GBIF_CHALLENGE.md  INSTALL.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  RELEASE_READY.md  pyproject.toml  requirements.txt  setup.sh  setup_git.sh  test_prompt_loading.py
.github/workflows/: ci.yml  installers.yml  release.yml
.streamlit/: config.toml
benchmarks/: README.md
benchmarks/data/: bombus_uk_reference.tsv  odonata_global_reference.tsv
benchmarks/results/: bombus_uk_model_comparison.tsv  odonata_global_model_comparison.tsv
docs/: index.html  main.js  style.css
examples/: BGE_1_test100.tsv  BGE_1_test20.tsv  README.md  ai_test.tsv  bombus_100.csv  bombus_test.tsv  dwc_test.csv  gbif_occurrence_real_sample.csv  gbif_occurrence_real_sample_README.md  gbif_occurrence_sample.csv  odonata_100.csv  odonata_localities.tsv  sample_localities.tsv  test_small.tsv
installer/: README.md  make_icons.py
installer/macos/: Info.plist  PlaceBot  build.sh
installer/windows/: build.ps1  placebot.iss
placebot/: __init__.py
placebot/cli/: __init__.py  batch_download.py  batch_download_staggered.py  batch_manager.py  batch_status.py  batch_status_staggered.py  ensemble.py  gbif.py  main.py  prep.py  user_interface.py
placebot/core/: __init__.py  ai_processor.py  async_batch_processor.py  batch_processor.py  config.py  coordinate_utils.py  cost_estimator.py  data_dirs.py  dataset_preview.py  deduplication.py  ensemble_analysis.py  field_mapping.py  file_manager.py  gemini_batch.py  model_comparison.py  model_selector.py  output_formatter.py  resume_utils.py
placebot/data/: __init__.py  (+1 more)
tests/: conftest.py  test_batch_results.py  test_config.py  test_cost_estimator.py  test_data_dirs.py  test_dataset_preview.py  test_ensemble_analysis.py  test_field_mapping.py  test_gbif_cli.py  test_gui_helpers.py  test_inline_dedup.py  test_model_selector.py  test_prep_cli.py  test_prompt_loading.py  test_resume_utils.py  test_staggered.py
(+31 files in other folders)
