[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "placebot"
version = "1.2.3"
description = "PlaceBot: Multi-vendor AI locality processor for extracting geographic coordinates from locality descriptions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jack Hollister", email = "jack.d.hollister@gmail.com"}
]
keywords = ["ai", "geocoding", "coordinates", "natural-language-processing", "anthropic", "openai", "gemini", "placebot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "anthropic>=0.34.0",
    "openai>=1.45.0",
    "google-genai>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.25.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
local = [
    "ollama>=0.3.0",
]
gui = [
    "streamlit>=1.30",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
placebot = "placebot.cli.main:main"
pb = "placebot.cli.main:main"
placebot-batch = "placebot.cli.batch_manager:main"
placebot-gui = "placebot.gui.launcher:main"

[project.urls]
Homepage = "https://github.com/JackDanHollister/PlaceBot"
Documentation = "https://github.com/JackDanHollister/PlaceBot#readme"
Repository = "https://github.com/JackDanHollister/PlaceBot"

[tool.setuptools.packages.find]
where = ["."]
include = ["placebot*"]
exclude = ["tests*", "results*", "output*", "input*"]

[tool.setuptools.package-data]
placebot = ["data/*.md"]
